--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>To-Do List App</title>
-  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <title>To-do list</title>
 </head>
 
 <body>
-  <div class="container">
-    <h2>To-Do List App</h2>
-    <p><em>Double click to mark an item off, click on "X" to delete an item, click on "Edit" to modify an item, and drag
-        items to reorder.</em></p>
 
-    <form name="toDoList" onsubmit="return false;">
-      <input type="text" name="ListItem" id="input" placeholder="Add a new task..." />
-      <button type="button" id="button" onclick="newItem()">Add</button>
-    </form>
+  <main class="app">
+    <h1>My Todo List...</h1>
+    <div class="input-header">
+      <h1><span id="date"></span></h1>
+      <div class="to-do-input">
+        <input type="text" id="item" placeholder="Enter a task..."><button id="enter">Enter</button>
+      </div>
+    </div>
+    <div class="to-do-list"></div>
+  </main>
 
-    <ol id="list"></ol>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-    integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
-  <script src="./js/script.js"></script>
+  <script src="script.js"></script>
+
 </body>
 
 </html>
